# User Story – Be Astonished by Your Incredible Progress (Web PWA)
# Select an exercise in Analytics and see a chart of progress over time
url: http://localhost:8080/LogOut/?dl_session=Wide-Grip_Barbell_Bench_Press:80:10,Wide-Grip_Barbell_Bench_Press:77.5:10,Barbell_Full_Squat:60:6
---
- launchApp
# Wait for the session created by the deep link to appear
- assertVisible: Wide-Grip Barbell Bench Press
# Navigate to analytics
- runFlow: ../subflows/nav_analytics.yaml
# Select "Repetitions" metric (improved from 10 to 12 reps in the created session)
# - tapOn:
#     css: .metric-selector select
# - assertVisible: Weight (kg)
# - assertVisible: Repetitions
# - assertVisible: Distance (km)
# - assertVisible: Duration (minutes)
# Select "Wide-Grip Barbell Bench Press" in the first exercise selector
- tapOn:
    # text: -- Select Exercise --
    css: .exercise-selector select
- tapOn: Wide-Grip Barbell Bench Press
# A chart should appear with the metric data
- assertVisible: {css: main svg}
- assertVisible: {css: main svg text, text: Weight (kg)}
- assertVisible: {css: main svg text, text: Wide-Grip Barbell Bench Press}
